--- a/src/main/java/CreateContact.fxml
+++ b/src/main/java/CreateContact.fxml
@@ -2,59 +2,57 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
-<?import java.lang.*?>
 <?import javafx.scene.layout.*?>
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
    <center>
-      <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="164.0" prefWidth="347.0" BorderPane.alignment="CENTER">
+      <GridPane BorderPane.alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="164.0" prefWidth="347.0">
          <children>
             <Label text="vorname">
                <padding>
                   <Insets left="10.0" />
                </padding>
             </Label>
-            <Label text="Nachname" GridPane.rowIndex="1">
+            <Label GridPane.rowIndex="1" text="Nachname">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Label>
-            <Label text="Handy-Nr.:" GridPane.rowIndex="2">
+            <Label GridPane.rowIndex="2" text="Handy-Nr.:">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Label>
-            <Label text="Festnetz-Telefon" GridPane.rowIndex="3">
+            <Label GridPane.rowIndex="3" text="Festnetz-Telefon">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Label>
-            <Label text="Email-Adresse" GridPane.rowIndex="4">
+            <Label GridPane.rowIndex="4" text="Email-Adresse">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Label>
-            <TextField fx:id="FirstNameBox" GridPane.columnIndex="1">
+            <TextField GridPane.columnIndex="1" fx:id="FirstNameBox">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="NameBox" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="NameBox">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="CellNrBox" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" fx:id="CellNrBox">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="PhoneNrBox" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" fx:id="PhoneNrBox">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="MailBox" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" fx:id="MailBox">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
@@ -74,10 +72,10 @@
       </GridPane>
    </center>
    <bottom>
-      <HBox prefWidth="200.0" spacing="10.0" BorderPane.alignment="CENTER">
+      <HBox BorderPane.alignment="CENTER" prefWidth="200.0" spacing="10.0">
          <children>
-            <Button fx:id="SaveButton" mnemonicParsing="false" onAction="#SaveNewContactClick" text="Speichern" />
-            <Button fx:id="CancelButton" mnemonicParsing="false" onAction="#CancelNewContactClick" text="Abbrechen" />
+            <Button mnemonicParsing="false" onAction="#SaveNewContactClick" text="Speichern" fx:id="SaveButton" />
+            <Button mnemonicParsing="false" onAction="#CancelNewContactClick" text="Abbrechen" fx:id="CancelButton" />
          </children>
          <padding>
             <Insets bottom="5.0" left="10.0" top="5.0" />
