--- a/src/main/resources/ViewController/SaveEncrypted.fxml
+++ b/src/main/resources/ViewController/SaveEncrypted.fxml
@@ -4,8 +4,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<GridPane alignment="CENTER" prefHeight="185.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8"
-          xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainController">
+<GridPane xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER" prefHeight="185.0" prefWidth="600.0"
+          xmlns="http://javafx.com/javafx/8" fx:controller="ViewController.MainController">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="191.0"/>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="527.0" minWidth="10.0" prefWidth="409.0"/>
