--- a/src/main/resources/ViewController/OpenEncrypted.fxml
+++ b/src/main/resources/ViewController/OpenEncrypted.fxml
@@ -7,7 +7,7 @@
 <GridPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
           minWidth="-Infinity"
           prefHeight="124.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8"
-          fx:controller="ViewController.MainController">
+          fx:controller="ViewController.OpenEncryptedController">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="102.0"/>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="505.0" minWidth="10.0" prefWidth="498.0"/>
